cupt (2.1.1~) UNRELEASED; urgency=low

  * Pass '-ggdb' to the compiler. Makes builds with 'nostrip' in
    DEB_BUILD_OPTIONS debuggable.

 -- Eugene V. Lyubimkin <jackyf@debian.org>  Sun, 29 May 2011 22:08:35 +0300

cupt (2.1.0) unstable; urgency=low

  * console:
    - New 'showauto' subcommand.
  * lib:
    - cache/relation:
      - Relation: new copy constructor from Relation&&.
      - RelationLine: new method 'operator=(RelationLine&&)'.
      - RelationExpression: new copy constructor from RelationExpression&&.
      - ArchitecturedRelation: new copy constructor from
        ArchitecturedRelation&&.
      - ArchitecturedRelationExpression: new copy constructor from
        ArchitecturedRelationExpression&&.
      - ArchitecturedRelationLine: new method
        'operator=(ArchitecturedRelationLine&&)'.
    - system/worker:
      - A small speed-up of generating dpkg action sequences for large queries.
      - RAM usage optimizations.
      - [Julian Andres Klode] Introduced a support for xz-compressed index
        files. (Closes: #623129)
      - Create lists directory if it does not exist.
    - config:
      - Be more clear in configuration file error messages that they talk
        about syntax errors.
      - New configuration variable 'cupt::directory::state::lists'.
      - Changed the default value of the variable
        'cupt::update::keep-bad-signatures' to 'yes'.
      - New configuration variable
        'cupt::resolver::score::removal-of-essential'.
    - cache:
      - Support regular expressions in pin preferences. Thanks to
        Julian Andres Klode for the suggestion. (Closes: #587478)
      - When skipping an index or translation file processing due to an error,
        use a human-readable alias in the warning message.
      - Mark structures and methods, which are related to local and remote
        locations of internal cache files, as deprecated.
    - system/resolvers/native:
      - RAM usage optimizations.